# test-generator

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml  python-package.yml
example/: appc_unit1a.yaml  appc_unit1b.yaml  appc_unit2a.yaml  appc_unit2b.yaml  appc_unit3a.yaml  appc_unit3b.yaml  appc_unit3c.yaml  terminalout.txt  unit1-2.yaml  unit1.yaml  unit2.yaml  unit3.yaml  unit6.yaml  unit7.yaml  unit8.yaml
example/apcalc/: unit1.yaml  unit2.yaml  unit3.yaml  unit4.yaml  unit5.yaml  unit6.yaml  unit7.yaml  unit8.yaml
example/apcalc/figures/: 10.tex  11.tex  12.tex  13.tex  14.tex  15.tex  16.tex  17-B.tex  17.tex  17C.tex  18.tex  19.tex  2.tex  20.tex  21.tex  22.tex  23.tex  24.tex  25.tex  26.tex  27.tex  28.tex  29.tex  30.tex  31.tex  32.tex  33.tex  34.tex  7.tex  8.tex
example/apcalc/quiz_questions/: unit1.yaml
example/apcalc/quizzes/: Quiz_1.10-1.13.yaml  Quiz_1.14-1.15.yaml  Quiz_1.3.yaml  Quiz_1.5-1.7.yaml  Quiz_1.8.yaml  unit1.yaml
example/apcalc/test_questions/: Test_Unit1_FRQ_nocalc.yaml  unit1.yaml  unit4.yaml  unit5.yaml  (+1 more)
example/appc/: unit1a.yaml  unit1b.yaml  unit2a.yaml  unit2b.yaml  unit3a.yaml  unit3b.yaml  unit3c.yaml
test_generator/: __init__.py  __main__.py  core.py  report.py  sections.py
test_generator.egg-info/: PKG-INFO  SOURCES.txt
test_generator/templates/: FRQ_Multipart_Template.tex  FRQ_Part_Template.tex  FRQ_Template.tex  MCQ_Template.tex  Question_Template.tex  Test_Template.tex  __init__.py
tests/: test_basic.py  test_examples.py  test_sections.py
(+20 files in other folders)
